# pigs

./: AGENTS.md  Cargo.toml  README.md  install.sh  package-lock.json  package.json  progress.txt  ralph_claude.sh  spec.md  spec2.md  spec3.md  spec4.md  spec5.md  spec6.md  spec7.md  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
src/: ansi.ts  clipboard.ts  codex.rs  completions.rs  console-session.ts  dashboard.rs  git.rs  index.ts  linear-client.ts  linear.rs  log-export.ts  main.rs  mount-session.ts  notification-monitor.ts  output-buffer.ts  port-finder.ts  pr-chain.ts  prompt-history.ts  prompt-queue.ts  provisioner.ts  shell-exec.ts  sprites-client.ts  state.rs  tmux.ts  tui.ts  types.ts  utils.rs  worktree-client.ts
src/__tests__/: ansi.test.ts  clipboard.test.ts  console-session.test.ts  dashboard.test.ts  filter-vms.test.ts  find-attention.test.ts  format-elapsed.test.ts  integration.test.ts  linear-client.test.ts  log-export.test.ts  mount-session.test.ts  notification-monitor.test.ts  output-buffer.test.ts  port-finder.test.ts  pr-chain.test.ts  prompt-history.test.ts  prompt-queue.test.ts  provisioner.test.ts  sort-vms.test.ts  sprites-client.test.ts  types.test.ts  vm-summary.test.ts
src/commands/: add.rs  checkout.rs  complete.rs  complete_linear.rs  create.rs  delete.rs  dir.rs  linear.rs  mod.rs  open.rs  review.rs
tests/: integration.rs  pipe_input.rs
tests/snapshots/: integration__checkout_branch_creates_worktree.snap  integration__checkout_pull_request_creates_worktree.snap  integration__create_on_wrong_branch.snap
