[package]
name = "pigs"
version = "0.7.0"
edition = "2024"
description = "A CLI tool for managing Claude instances with git worktree"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.50", features = ["derive", "env"] }
clap_complete = "4.5.59"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
colored = "3.0.0"
dialoguer = "0.12.0"
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
bip39 = "2.2.0"
anyhow = "1.0.100"
atty = "0.2.14"
shell-words = "1.1.0"
axum = { version = "0.7.9", features = ["macros", "json", "ws"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "signal"] }
webbrowser = "0.8.12"
once_cell = "1.19.0"
ureq = { version = "3", features = ["json"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
portable-pty = "0.8.1"
futures-util = "0.3.31"

[dev-dependencies]
insta = { version = "1.43.2", features = ["json", "redactions"] }
tempfile = "3.23.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
regex = "1.12.2"
temp-env = "0.3.6"
